--- a/package.json
+++ b/package.json
@@ -13,22 +13,24 @@
   },
   "dependencies": {
     "@astrojs/check": "0.9.3",
-    "@astrojs/node": "^8.3.3",
-    "@astrojs/react": "^3.6.2",
-    "@sanity/astro": "^3.1.6",
-    "@sanity/visual-editing": "^2.1.9",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
+    "@astrojs/node": "8.3.3",
+    "@astrojs/react": "3.6.2",
+    "@sanity/astro": "3.1.6",
+    "@sanity/client": "6.21.3",
+    "@sanity/visual-editing": "2.1.9",
+    "@types/react": "18.3.5",
+    "@types/react-dom": "18.3.0",
     "astro": "4.15.1",
-    "marked": "^14.1.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "sanity": "^3.56.0",
+    "marked": "14.1.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "sanity": "3.56.0",
     "typescript": "5.5.4"
   },
   "packageManager": "pnpm@8.7.0",
   "devDependencies": {
-    "prettier": "^3.3.3",
-    "prettier-plugin-astro": "^0.14.1"
+    "@flydotio/dockerfile": "0.5.8",
+    "prettier": "3.3.3",
+    "prettier-plugin-astro": "0.14.1"
   }
 }
