--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "echo-astro",
   "type": "module",
   "version": "0.0.1",
+  "packageManager": "pnpm@8.7.0",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -9,7 +10,8 @@
     "preview": "astro preview",
     "astro": "astro",
     "format": "prettier --write .",
-    "format:certify": "prettier --check ."
+    "format:check": "prettier --check .",
+    "db:typegen": "kysely-codegen --dialect postgres --out-file ./database.types.ts"
   },
   "dependencies": {
     "@astrojs/check": "0.9.3",
@@ -20,16 +22,23 @@
     "@sanity/visual-editing": "2.1.9",
     "@types/react": "18.3.5",
     "@types/react-dom": "18.3.0",
+    "arctic": "1.9.2",
     "astro": "4.15.1",
+    "kysely": "0.27.4",
+    "lucia": "3.2.0",
     "marked": "14.1.0",
+    "nanoid": "5.0.7",
+    "oslo": "1.2.1",
+    "pg": "8.12.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "sanity": "3.56.0",
     "typescript": "5.5.4"
   },
-  "packageManager": "pnpm@8.7.0",
   "devDependencies": {
     "@flydotio/dockerfile": "0.5.8",
+    "@types/pg": "8.11.8",
+    "kysely-codegen": "0.16.3",
     "prettier": "3.3.3",
     "prettier-plugin-astro": "0.14.1"
   }
