--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "astro": "astro",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "db:typegen": "kysely-codegen --dialect postgres --out-file ./database.types.ts"
+    "db:typegen": "kysely-codegen --dialect postgres --camel-case --out-file ./database.types.ts"
   },
   "dependencies": {
     "@astrojs/check": "0.9.3",
